# raft-rs

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  common.sh  default.nix  generate-proto.sh
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  something-else.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md  something-else.md
.github/workflows/: ci.yml
benches/: benches.rs
benches/suites/: cluster.rs  inflights.rs  mod.rs  progress.rs  progress_set.rs  raft.rs  raw_node.rs
datadriven/: Cargo.toml
datadriven/src/: datadriven.rs  lib.rs  line_scanner.rs  line_sparser.rs  test_data.rs  test_data_reader.rs
datadriven/src/datadriven/: datadriven_test.rs
datadriven/src/testdata/: data.json  data.txt  multiline  test.json  test1.json  unknown_data_1.txt  unknown_data_2.txt
datadriven/src/testdata/datadriven/: data.txt  data2.txt  datadriven_1.txt  datadriven_2.txt
datadriven/src/testdata/log_message/: data_001.txt
datadriven/src/testdata/rewrite/: basic-after  basic-before  eof-1-after  eof-2-after  eof-2-before
datadriven/src/testdata/unknown_data/: data_002.txt
examples/five_mem_node/: main.rs
examples/single_mem_node/: main.rs
harness/: Cargo.toml
harness/src/: interface.rs  lib.rs  network.rs
harness/tests/: tests.rs
harness/tests/failpoints_cases/: mod.rs
harness/tests/integration_cases/: mod.rs  test_membership_changes.rs  test_raft.rs  test_raft_flow_control.rs  test_raft_follower_replication.rs  test_raft_paper.rs  test_raft_snap.rs  test_raw_node.rs
harness/tests/test_util/: mod.rs
proto/: Cargo.toml  README.md  build.rs  eraftpb.proto
proto/include/: rustproto.proto
proto/proto/: eraftpb.proto
proto/src/: confchange.rs  confstate.rs  lib.rs  protobuf.rs
proto/src/prost/: eraftpb.rs  wrapper_eraftpb.rs
proto/src/protobuf/: eraftpb.rs
src/: confchange.rs  config.rs  derializer.rs  eraftpb.rs  errors.rs  lib.rs  log_unstable.rs  metrics.rs  progress.rs  prost.rs  quorum.rs  raft.rs  raft_log.rs  raw_node.rs  read_only.rs  rsprost.rs  rsprotobuf.rs  status.rs  storage.rs  tracker.rs  type.rs  types.rs  util.rs
src/confchange/: changer.rs  datadriven_test.rs  restore.rs
src/group/: mod.rs
src/harness/: interface.rs  network.rs
src/progress/: inflights.rs  mod.rs  progress.rs  progress_set.rs
src/prost/: eraftpb.rs  wrapper_eraftpb.rs
src/quorum/: datadriven_test.rs  joint.rs  majority.rs  util.rs
src/quorum/testdata/: joint_commit.txt  joint_group_commit.txt  joint_vote.txt  majority_commit.txt  majority_group_commit.txt  majority_vote.txt
src/rsprost/: eraftpb.rs  protobuf_compat.rs  wrapper_eraftpb.rs
src/rsprotobuf/: eraftpb.rs
src/tracker/: inflights.rs  progress.rs  state.rs
tests/: tests.rs
tests/cases/: test_raft.rs  test_raft_flow_control.rs  test_raft_paper.rs  test_raft_snap.rs  test_raw_node.rs
tests/failpoint_cases/: mod.rs
tests/failpoints_cases/: mod.rs
tests/integration_cases/: mod.rs  test_follower_replication.rs  test_membership_changes.rs  test_raft.rs  test_raft_flow_control.rs  test_raft_paper.rs  test_raft_snap.rs  test_raw_node.rs
tests/test_util/: mod.rs
tla/: .gitignore  Makefile  README.md
tla/consensus/: FifoNetwork.tla  RaftRs.tla  RaftRsUdp.tla  UdpNetwork.tla  WrapperTcp.cfg  WrapperTcp.tla  WrapperUdp.tla
trusted/: Cargo.toml  README.md  build.rs
trusted/example/: Cargo.toml  README.md  build.rs
trusted/example/src/: main.rs
trusted/model/: Cargo.toml
trusted/model/src/: lib.rs  model.rs
trusted/pal/: Cargo.toml  README.md
trusted/pal/src/: lib.rs  pal.rs
trusted/platform/: Cargo.toml  README.md
trusted/proto/: counter.proto  endpoint.proto
trusted/src/: driver.rs  lib.rs  model.rs  platform.rs  util.rs
trusted/tests/: atomic_counter.rs
