[package]
name = "raft"
version = "0.6.0-alpha"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/pingcap/raft-rs"
readme = "README.md"
homepage = "https://github.com/pingcap/raft-rs"
documentation = "https://docs.rs/raft"
description = "The rust language implementation of Raft algorithm."
categories = ["algorithms", "database-implementations"]
edition = "2018"

[workspace]
members = ["harness"]

[features]
default = ["default-logger"]
# Enable failpoints
failpoints = ["fail/failpoints"]
default-logger = ["slog-stdlog", "slog-envlogger", "slog-term"]

# Make sure to synchronize updates with Harness.
[dependencies]
slog = "2.2"
slog-stdlog = { version = "4", optional = true }
slog-envlogger = { version = "2.1.0", optional = true }
slog-term = { version = "2.4.0", optional = true }
quick-error = "1.2.2"
rand = "0.7"
fxhash = "0.2.1"
fail = { version = "0.3", optional = true }
getset = "0.0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.0"
regex = "1.1"
slog-stdlog = "4"
slog-envlogger = "2.1.0"
slog-async = "2.3.0"
slog-term = "2.4.0"

[[bench]]
name = "benches"
harness = false

[badges]
travis-ci = { repository = "pingcap/raft-rs" }

[[example]]
name = "single_mem_node"
path = "examples/single_mem_node/main.rs"

[[example]]
name = "five_mem_node"
path = "examples/five_mem_node/main.rs"
