[package]
name = "datadriven"
version = "0.1.0"
authors = ["accelsao <bebe8277@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
regex = "1"
lazy_static = "1.4.0"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
difference = "2.0.0"
