[package]
name = "harness"
version = "0.1.0"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = []
repository = "https://github.com/pingcap/raft-rs/harness"
readme = "README.md"
homepage = "https://github.com/pingcap/raft-rs/harness"
description = "A testing harness for Raft."
categories = []
edition = "2018"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["raft/protobuf-codec"]
prost-codec = ["raft/prost-codec"]

# Make sure to synchronize updates with Raft.
[dependencies]
raft = { path = "..", default-features = false }
rand = "~0.7.0"
slog = "~2.5.2"
slog-term = "~2.4.1"
slog-envlogger = "~2.1.0"

[dev-dependencies]
criterion = "~0.2.11"
hashbrown = "~0.5.0"
lazy_static = "~1.3.0"
protobuf = "~2.8.0"
regex = "~1.2.0"
slog-async = "~2.3.0"
