[package]
name = "harness"
version = "0.1.0"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = []
repository = "https://github.com/pingcap/raft-rs/harness"
readme = "README.md"
homepage = "https://github.com/pingcap/raft-rs/harness"
description = "A testing harness for Raft."
categories = []
edition = "2018"

[features]
default = ["protobuf-codec", "raft/default-logger"]
protobuf-codec = ["raft/protobuf-codec"]
prost-codec = ["raft/prost-codec"]

# Make sure to synchronize updates with Raft.
[dependencies]
raft = { path = "..", default-features = false }
rand = "0.6.5"
slog = "2.2"

[dev-dependencies]
criterion = ">0.2.4"
hashbrown = "0.5"
lazy_static = "1.0"
protobuf = "2"
regex = "1.1"
