[package]
name = "raft-proto"
version = "0.6.0-alpha"
authors = ["The TiKV Project Developers"]
edition = "2018"
license = "Apache-2.0"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/pingcap/raft-rs"
homepage = "https://github.com/pingcap/raft-rs"
documentation = "https://docs.rs/raft-proto"
description = "Protocol definitions for the rust language implementation of the Raft algorithm."
categories = ["algorithms", "database-implementations"]
build = "build.rs"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/protobuf-codec"]
prost-codec = ["prost", "prost-derive", "bytes", "lazy_static", "protobuf-build/prost-codec"]

[build-dependencies]
protobuf-build = { version = "0.8", default-features = false }

[dependencies]
bytes = { version = "0.4.11", optional = true }
lazy_static = { version = "1.3.0", optional = true }
prost = { version = "0.5", optional = true }
prost-derive = { version = "0.5", optional = true }
protobuf = "2"
