[package]
name = "raft-proto"
version = "0.7.0"
authors = ["The TiKV Project Developers"]
edition = "2018"
license = "Apache-2.0"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/pingcap/raft-rs"
homepage = "https://github.com/pingcap/raft-rs"
documentation = "https://docs.rs/raft-proto"
description = "Protocol definitions for the rust language implementation of the Raft algorithm."
categories = ["algorithms", "database-implementations"]
build = "build.rs"

[features]
default = ["prost-codec"]
prost-codec = ["prost", "tonic", "lazy_static"]

[build-dependencies]
prost-build = "0.9"
tonic-build = "0.6.2"

[dependencies]
bytes = { version = "1", optional = true }
lazy_static = { version = "1", optional = true }
prost = { version = "0.9", optional = true }
protobuf = "2"
tonic = { version = "0.6.2", optional = true }
