[package]
name = "trusted_example"
version = "0.1.0"
authors = ["people"]

[dependencies]
trusted_pal = { path = "../pal" } # no_std
trusted_model = { path = "../model" } # no_std
trusted_platform = { path = "../platform" } # std for example implementation
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
hashbrown = { version = "0.14.0"}

[build-dependencies]
prost-build = { version = "0.11" }

[[bin]]
name = "trusted-example" # std for example